<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background"
    android:padding="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="20dp"
            android:src="@drawable/logo"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/vertical_span"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_address"
            android:textSize="@dimen/text_small"
            android:paddingLeft="5dp"/>
        <EditText
            android:id="@+id/server_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/def_server"
            android:imeOptions="actionGo"
            android:inputType="text"
            android:maxLines="1"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/vertical_span"/>
        <Spinner
            android:id="@+id/databases"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:popupBackground="@color/colorPrimary"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/vertical_span"/>
        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/vertical_span"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/vertical_span"/>
        <Button
            android:id="@+id/enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button"
            style="?android:attr/borderlessButtonStyle"
            android:padding="10dp"
            android:textSize="@dimen/text_normal"
            android:textColor="#c39201"
            android:text="@string/enter"/>
    </LinearLayout>
</ScrollView>